--- a/app/src/main/res/layout/item_autocomplete_bookmark_suggestion.xml
+++ b/app/src/main/res/layout/item_autocomplete_bookmark_suggestion.xml
@@ -19,7 +19,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginTop="14dp">
+    android:layout_marginBottom="8dp"
+    android:layout_marginTop="6dp">
 
     <ImageView
         android:id="@+id/bookmarkIndicator"
