Use mini logo for better sizing

--- a/app/src/main/res/layout/activity_system_search.xml
+++ b/app/src/main/res/layout/activity_system_search.xml
@@ -64,7 +64,7 @@
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:importantForAccessibility="no"
-                        android:src="@drawable/logo_medium"
+                        android:src="@drawable/logo_mini"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
