Add view state reset and tweak app label text size

--- a/app/src/main/res/layout/activity_system_search.xml
+++ b/app/src/main/res/layout/activity_system_search.xml
@@ -148,12 +148,14 @@
                 android:layout_height="wrap_content"
                 android:background="?attr/colorPrimary"
                 android:backgroundTint="?attr/colorPrimary"
+                android:textSize="13dp"
                 android:elevation="4dp"
-                android:paddingStart="8dp"
-                android:paddingTop="8dp"
-                android:paddingEnd="8dp"
+                android:paddingStart="16dp"
+                android:paddingTop="6dp"
+                android:paddingBottom="2dp"
+                android:paddingEnd="16dp"
                 android:text="@string/system_search_app_label"
-                android:textColor="@color/warGreyTwo"
+                android:textColor="@color/grayish"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/autocompleteSuggestions"
