--- a/app/src/main/res/layout/content_settings_general.xml
+++ b/app/src/main/res/layout/content_settings_general.xml
@@ -37,6 +37,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/settingsGeneralTitle" />
 
+    <TextView
+        android:id="@+id/changeAppIcon"
+        style="@style/SettingsItemClickable"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Change App Icon"
+        app:layout_constraintTop_toBottomOf="@id/lightThemeToggle" />
+
     <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/autocompleteToggle"
         style="@style/SettingsSwitch"
@@ -44,7 +52,7 @@
         android:theme="@style/SettingsSwitchTheme"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/lightThemeToggle" />
+        app:layout_constraintTop_toBottomOf="@id/changeAppIcon" />
 
     <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/setAsDefaultBrowserSetting"
