show instructions card when user is prompted with defaultbrowser as dialog Refacto dax dialog layout to use linearlayout instead of constraint layout

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -62,7 +62,7 @@
         <item name="callToActionSubtitleColor">@color/grayishThree</item>
         <item name="daxDialogBackgroundColor">@color/charcoalGrey</item>
         <item name="daxDialogSecondaryTextColor">@color/white</item>
-        <item name="daxDialogSecondaryButtonRippleColor">?attr/colorControlHighlight</item>
+        <item name="daxDialogSecondaryButtonRippleColor">@color/white</item>
 
         <item name="feedbackAnonymousFeedbackLabelColor">@color/grayish</item>
         <item name="feedbackListItemBackgroundColor">@color/almostBlack</item>
