showing all icons and allowing the user to select one

--- a/app/src/main/res/layout/item_app_icon.xml
+++ b/app/src/main/res/layout/item_app_icon.xml
@@ -17,8 +17,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="40dp"
-    android:layout_height="40dp"
+    android:layout_width="60dp"
+    android:layout_height="60dp"
+    android:background="@drawable/background_app_icon"
     tools:background="@android:color/white">
 
     <ImageView
@@ -29,6 +30,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/network_pill_facebook_inc" />
+        tools:src="@mipmap/ic_launcher_blue" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
