--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -38,6 +38,7 @@
     <color name="whiteThree">#f5f5f5</color>
     <color name="whiteFour">#f1f1f1</color>
     <color name="whiteFive">#fafafa</color>
+    <color name="whiteEight">#D7D7D7</color>
     <color name="midnight">#161616</color>
     <color name="almostBlackDark">#222222</color>
     <color name="almostBlack">#333333</color>
