--- a/app/src/main/res/layout/content_settings_general.xml
+++ b/app/src/main/res/layout/content_settings_general.xml
@@ -46,6 +46,7 @@
         android:gravity="center_vertical"
         android:layout_height="60dp"
         android:drawableEnd="@mipmap/ic_launcher"
+        android:drawablePadding="16dp"
         app:layout_constraintTop_toBottomOf="@id/lightThemeToggle" />
 
     <androidx.appcompat.widget.SwitchCompat
