--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -49,5 +49,7 @@
     <attr name="feedbackEditTextBackgroundColor" format="color" />
     <attr name="feedbackEditTextHintColor" format="color" />
     <attr name="daxDialogBackgroundColor" format="color" />
+    <attr name="daxDialogSecondaryButtonTextColor" format="color" />
+    <attr name="daxDialogSecondaryButtonRippleColor" format="color" />
 
 </resources>
