--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -325,5 +325,21 @@
         <item name="android:layout_marginTop">9dp</item>
     </style>
 
+    <style name="DaxDialogButton" parent="@style/Widget.AppCompat.Button.Borderless.Colored">
+        <item name="android:textAllCaps">false</item>
+        <item name="cornerRadius">20dp</item>
+    </style>
+
+    <style name="DaxDialogButton.Primary">
+        <item name="android:backgroundTint">@color/cornflowerBlue</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="rippleColor">?attr/daxDialogSecondaryButtonRippleColor</item>
+    </style>
+
+    <style name="DaxDialogButton.Secondary">
+        <item name="android:backgroundTint">?attr/daxDialogBackgroundColor</item>
+        <item name="android:textColor">?attr/daxDialogSecondaryButtonTextColor</item>
+        <item name="rippleColor">?attr/daxDialogSecondaryButtonRippleColor</item>
+    </style>
 
 </resources>
