ensure textview uses full width

--- a/app/src/main/res/layout/content_settings_general.xml
+++ b/app/src/main/res/layout/content_settings_general.xml
@@ -45,7 +45,7 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:text="Change App Icon"
-        app:layout_constraintEnd_toStartOf="@+id/changeAppIcon"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/lightThemeToggle" />
