fix: statusbar showing random color in high api devices

--- a/app/src/main/res/layout/content_dax_dialog.xml
+++ b/app/src/main/res/layout/content_dax_dialog.xml
@@ -18,7 +18,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/dialogContainer"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
