adding better padding, always using round icons for the selection screen

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -34,6 +34,7 @@
     <dimen name="onboardingTitleMarginTop">20dp</dimen>
 
     <dimen name="changeAppIconPadding">16dp</dimen>
-    <dimen name="changeAppIconListPadding">8dp</dimen>
+    <dimen name="changeAppIconListPadding">4dp</dimen>
+    <dimen name="changeAppIconSize">75dp</dimen>
 
 </resources>
