--- a/app/src/main/res/drawable/background_grey_border.xml
+++ b/app/src/main/res/drawable/background_grey_border.xml
@@ -18,12 +18,12 @@
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
         android:color="@color/white">
     <item>
-        <shape android:shape="rectangle">
+        <shape android:shape="oval">
             <padding
-                    android:left="0dip"
-                    android:top="0dip"
-                    android:right="0dip"
-                    android:bottom="0dip"/>
+                    android:left="4dip"
+                    android:top="4dip"
+                    android:right="4dip"
+                    android:bottom="4dip"/>
         </shape>
 
     </item>
