--- a/app/src/main/res/drawable/background_grey_border_selected.xml
+++ b/app/src/main/res/drawable/background_grey_border_selected.xml
@@ -2,15 +2,15 @@
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
         android:color="@color/white">
     <item>
-        <shape android:shape="rectangle">
+        <shape android:shape="oval">
             <stroke
                     android:width="1dip"
                     android:color="@color/whiteEight"/>
             <padding
-                    android:left="0dip"
-                    android:top="0dip"
-                    android:right="0dip"
-                    android:bottom="0dip"/>
+                    android:left="4dip"
+                    android:top="4dip"
+                    android:right="4dip"
+                    android:bottom="4dip"/>
         </shape>
 
     </item>
