--- a/app/src/main/res/layout/item_app_icon.xml
+++ b/app/src/main/res/layout/item_app_icon.xml
@@ -16,20 +16,19 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="60dp"
-    android:layout_height="60dp"
-    android:background="@drawable/background_app_icon"
-    tools:background="@android:color/white">
+    android:layout_width="@dimen/changeAppIconSize"
+    android:layout_height="@dimen/changeAppIconSize"
+    android:background="@drawable/background_app_icon">
 
     <ImageView
         android:id="@+id/icon"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:importantForAccessibility="no"
+        android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@mipmap/ic_launcher_blue" />
+        android:background="@mipmap/ic_launcher_blue" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
