--- a/app/src/main/res/layout/content_settings_general.xml
+++ b/app/src/main/res/layout/content_settings_general.xml
@@ -55,7 +55,6 @@
         android:layout_width="0dp"
         android:layout_height="40dp"
         android:layout_marginEnd="16dp"
-        android:padding="4dp"
         app:layout_constraintBottom_toBottomOf="@+id/changeAppIconLabel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/changeAppIconLabel"
@@ -76,6 +75,7 @@
         android:text="@string/settingsDefaultBrowserEnabled"
         android:theme="@style/SettingsSwitchTheme"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/autocompleteToggle" />
 
